--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,13 @@ github_username: kylezgq
 permalink: /:slug.html
 
 favicon: "logo.png"
+
 goat_counter: "kylezgq"
 
 remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "auto"
+  appearance: "light"
   back_home_text: "back"
   date_format: "%Y-%m-%d"
   show_description: false 
