--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
       - title: linkedin
         url: https://www.linkedin.com/in/kylezgq/
 
-  - title: my thoughts
+  - title: all posts
     post_list:
       limit: 5
       show_more: true 
