--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -11,3 +11,7 @@ entries:
       show_more: true 
       show_more_text: See archive...
       show_more_url: archive.html
+
+<a href="https://www.twitter.com/kylezgq">
+<img alt="Follow kylezgq on Twitter" src="http://twitter-badges.s3.amazonaws.com/follow_me-a.png" />
+</a>
