--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,15 +1,52 @@
-I'm an investor, entrepreneur, developer.
+entries:
+  - title: this page is the most up to date list of what i’m working on, thinking about and doing right now. The [==now movement==](https://sivers.org/nowff) inspired by [@Sivers](https://twitter.com/sivers)
 
-Some things about me
+entries:
+  - title: life
+    entries:
+      - title: grew up in a northern coastal city
+      - title: graduating in 2024, perfectly missed out on the golden decade of the PC, mobile internet, and the rise of venture capital in the mainland
+      - title: occasionally pop up in Beijing, Shenzhen, Hangzhou, Singapore or The Valley
+      - title: having three cats
+
+entries:
+  - title: work
+    entries:
+      - title: first participated in the Bain Cup, a consulting case competition, where compelling slides sparked my interest in consulting industry
+      - title: interned at Roland Berger for six months, a challenging but rewarding journey into the management consulting
+      - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
+      - title: pivoted my research to generative AI following the release of GPT-3.5 in November 2022, and soon after, i joined a VC internship
+      - title: joined 42章经 in summer 2023 for a six-month internship, learning from the top AI founders, investors and colleagues
+      - title: now focused on global software, innovative opportunities in LLM & RL, and bootstrapped products by indie makers in niche markets
+
+entries:
+  - title: things i like to geek out on
+    entries:
+      - title: writing, reading, and prototyping
+      - title: seeking out lesser-known information sources
+      - title: day trip to meet and support interesting startup founders
+      - title: generative ai, llm, micro-saas, bootstrapper
+      - title: whisky & cocktail
+      - title: soccer, former school team player
+      - title: texas hold’em.
+      
+entries:
+  - title: best way to connect
+    entries:
+      - title: for quick stuff, say hi on [WeChat](https://peaceful-squirrel-5cac5f.netlify.app/)
+      - title: for longer things or to schedule something, email is best: hi at this-domain
 
 entries:
   - title: info
     entries:
-      - title: tbd...
+      - title: twitter
+        url: https://x.com/kylezgq
       - title: linkedin
         url: https://www.linkedin.com/in/kylezgq/
       - title: my book shelf
         url: https://www.goodreads.com/review/list/175571315
+      - title: Jike
+        url: https://okjk.co/m9u3Ox
 
   - title: my thoughts
     post_list:
@@ -17,4 +54,3 @@ entries:
       show_more: true 
       show_more_text: See archive...
       show_more_url: archive.html
-
