--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 entries:
-  - title: this page is the most up to date list of what i’m working on, thinking about and doing right now. "the <a href='https://sivers.org/nowff'>now movement</a>" inspired by "<a href='https://twitter.com/sivers'>@Sivers</a>"
+  - title: "this page is the most up to date list of what i’m working on, thinking about and doing right now. the <a href='https://sivers.org/nowff'>now movement</a>" inspired by "<a href='https://twitter.com/sivers'>@Sivers</a>"
 
 entries:
   - title: life
