--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -48,6 +48,7 @@ entries:
       - title: Jike
         url: https://okjk.co/m9u3Ox
 
+entries:
   - title: my thoughts
     post_list:
       limit: 5
