--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -34,7 +34,7 @@ entries:
 entries:
   - title: best way to connect
     entries:
-      - title: for quick stuff, say hi on "<a href='https://peaceful-squirrel-5cac5f.netlify.app/'>WeChat</a>"
+      - title: for quick stuff, say hi on WeChat
       - title: for longer things or to schedule something, email is best: hi at this-domain
 
 entries:
