--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -30,7 +30,7 @@ entries:
   - title: best way to connect
     entries:
       - title: for quick stuff, say hi on WeChat
-      - title: for longer things or to schedule something, email is best: hi at this-domain
+      - title: for longer things or to schedule something, email is best hi at this-domain
 
   - title: info
     entries:
