--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+include:
+  - _pages
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
