--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -26,13 +26,17 @@ entries:
       - title: whisky & cocktail
       - title: soccer, former school team player
       - title: texas hold’em.
+
+  - title: some things i believe
+    entries:
+      - title: tbd...
   
   - title: best way to connect
     entries:
       - title: for quick stuff, say hi on WeChat
       - title: for longer things or to schedule something, email is best hi at this-domain
 
-  - title: info
+  - title: find me elsewhere
     entries:
       - title: twitter
         url: https://x.com/kylezgq
