--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -33,7 +33,7 @@ entries:
   
   - title: best way to connect
     entries:
-      - title: for quick stuff, say hi on WeChat
+      - title: for quick stuff, say hi on [WeChat](https://peaceful-squirrel-5cac5f.netlify.app/)
       - title: for longer things or to schedule something, email is best hi at this-domain
 
   - title: find me elsewhere
