--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,7 +15,8 @@ entries:
       - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
       - title: pivoted my research to generative AI following the release of GPT-3.5 in November 2022, and soon after, i joined a VC internship
       - title: joined 42章经 in summer 2023 for a six-month internship, learning from the top AI founders, investors and colleagues
-      - title: now focused on global software, innovative opportunities in LLM & RL, and bootstrapped products by indie makers in niche markets
+      - title: now focused on global software, innovative opportunities in LLM & RL, and bootstrapped startups by indie makers in niche markets
+      - title: i also always <a href='archive.html'>blog</a>, mostly on tech, startups, and self-growth
 
   - title: things i like to geek out on
     entries:
@@ -46,10 +47,3 @@ entries:
         url: https://www.goodreads.com/review/list/175571315
       - title: Jike
         url: https://okjk.co/m9u3Ox
-
-  - title: my thoughts
-    post_list:
-      limit: 5
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
