--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,8 +3,8 @@ entries:
   
   - title: life
     entries:
-      - title: grew up in a northern coastal city
-      - title: graduating in 2024, perfectly missed out on the golden decade of the PC, mobile internet, and the rise of venture capital in the mainland
+      - title: grew up in a northern coastal city in mainland China
+      - title: graduating in 2024, perfectly missed out on the golden decade of the PC, mobile internet, and the venture capital boom in the mainland
       - title: occasionally pop up in Beijing, Shenzhen, Hangzhou, Singapore or The Valley
       - title: having three cats
 
