--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 entries:
-  - title: this page is the most up to date list of what I’m working on, thinking about and doing right now
+  - title: this page is the most up to date list of what i’m working on, thinking about and doing right now
   
   - title: life
     entries:
@@ -13,17 +13,17 @@ entries:
       - title: first participated in the Bain Cup, a consulting case competition, where compelling slides sparked my interest in consulting industry
       - title: interned at Roland Berger for six months, a challenging but rewarding journey into the management consulting
       - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
-      - title: pivoted my research to generative AI following the release of GPT-3.5 in November 2022, and soon after, i joined a VC internship
-      - title: joined 42章经 in summer 2023 for a six-month internship, learning from the top AI founders, investors and colleagues
+      - title: pivoted my research to generative ai following the release of gpt-3.5 in November 2022, and soon after, i joined a VC internship
+      - title: joined 42 Capital in summer 2023 for a six-month internship, learning from the top AI founders, investors and colleagues
       - title: now focused on global software, innovative opportunities in LLM & RL, and bootstrapped startups by indie makers in niche markets
       - title: i also always <a href='archive.html'>blog</a>, mostly on tech, startups, and self-growth
 
   - title: things i like to geek out on
     entries:
       - title: writing, reading, and prototyping
-      - title: seeking out lesser-known information sources
+      - title: seeking out the lesser-known information sources
       - title: day trip to meet and support interesting startup founders
-      - title: generative ai, llm, micro-saas, bootstrapper
+      - title: generative ai, LLM, micro-saas, bootstrapper
       - title: whisky & cocktail
       - title: soccer, former school team player
       - title: texas hold’em.
