--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -26,7 +26,7 @@ entries:
       - title: generative ai, LLM, micro-saas, bootstrapper
       - title: whisky & cocktail
       - title: soccer, former school team player
-      - title: texas hold’em.
+      - title: texas hold’em
 
   - title: some things i believe
     entries:
