--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -50,7 +50,7 @@ entries:
           - title: we might call this first principle thinking
       - title: intellectual honesty
         entries: 
-          - title: the best praise about Bill Gurley i’ve ever heard was from Peter Fenton, the degree to which truth comes ahead of ego or self for him
+          - title: the best praise i've ever heard about someone was from Peter Fenton's remark about Bill Gurley, the degree to which truth comes ahead of ego or self for him
   
   - title: best way to connect
     entries:
