--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,7 +14,7 @@ entries:
       - title: interned at roland berger for six months, a challenging but rewarding journey into the management consulting
       - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
       - title: pivoted my research to generative ai following the release of gpt-3.5 in november 2022, and soon after, i joined a vc internship
-      - title: joined 42 Capital in summer 2023 for a six-month internship, learning from the top ai founders, investors and colleagues
+      - title: joined 42 capital in summer 2023 for a six-month internship, learning from the top ai founders, investors and colleagues
       - title: now focused on global software, innovative opportunities in llm & rl, and bootstrapped startups by indie makers in niche markets
       - title: i also always <a href='archive.html'>blog</a>, mostly on tech, startups, and self-growth
 
@@ -24,7 +24,7 @@ entries:
       - title: discovering the under-the-radar sources & signals
       - title: enjoying visualizing data and crafting slides
       - title: hanging out with interesting startup founders, creators, and hackers
-      - title: generative ai, LLM, software, bootstrapper
+      - title: generative ai, llm, software, bootstrapper
       - title: whisky & cocktail
       - title: soccer, former school team player
       - title: texas hold'em
@@ -32,7 +32,7 @@ entries:
   - title: some things i believe
     entries:
       - title: most careers turn into sales jobs when you get senior enough
-      - title: if you loved your work, you'd work on Sundays
+      - title: if you loved your work, you'd work on sundays
         entries: 
           - title: not to equate work with a job
           - title: to be driven by curiosity rather than careerism, to give free rein to your curiosity instead of working on what you're supposed to
@@ -55,7 +55,7 @@ entries:
   
   - title: best way to connect
     entries:
-      - title: for quick stuff, say hi on <a href='https://kylezgq.github.io/assets/images/WeChat-Contact.png'>WeChat</a>
+      - title: for quick stuff, say hi on <a href='https://kylezgq.github.io/assets/images/WeChat-Contact.png'>wechat</a>
       - title: for longer things or to schedule something, email is best hi-at-this-domain
 
   - title: find me elsewhere
