--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -23,11 +23,11 @@ entries:
       - title: writing, reading, and prototyping
       - title: discovering the under-the-radar sources & signals
       - title: enjoying visualizing data and crafting slides
-      - title: hanging out with interesting startup founders, creators, and hackers
-      - title: generative ai, llm, software, bootstrapper
+      - title: hanging out with interesting startup founders, builders, and hackers
+      - title: generative ai, software, bootstrapper
       - title: whisky & cocktail
       - title: soccer, former school team player
-      - title: texas hold'em
+      - title: poker, including both nlhe & plo
 
   - title: some things i believe
     entries:
