--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,6 @@ entries:
     entries:
       - title: grew up in a northern coastal city in mainland china
       - title: graduating in 2024, perfectly missed out on the golden decade of the pc, mobile internet, and the venture capital boom
-      - title: occasionally pop up in beijing, shanghai, singapore or the valley
       - title: having three cats
 
   - title: work
@@ -15,16 +14,15 @@ entries:
       - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
       - title: pivoted my research to generative ai following the release of gpt-3.5 in november 2022, and soon after, i joined a vc internship
       - title: joined 42 capital in summer 2023 for a six-month internship, learning from the top ai founders, investors and colleagues
-      - title: now focused on global software, innovative opportunities in llm & rl, and bootstrapped startups by indie makers in niche markets
+      - title: now focused on software products, bootstrapped startups, and blah blah blah...
       - title: i also always <a href='archive.html'>blog</a>, mostly on tech, startups, and self-growth
 
   - title: things i like to geek out on
     entries:
-      - title: writing, reading, and prototyping
+      - title: writing, sketching, reading, and prototyping
       - title: discovering the under-the-radar sources & signals
       - title: enjoying visualizing data and crafting slides
-      - title: hanging out with interesting startup founders, builders, and hackers
-      - title: generative ai, software, bootstrapper
+      - title: jamming with sharp founders, builders, and makers
       - title: whisky & cocktail
       - title: soccer, former school team player
       - title: poker, including both nlhe & plo
