--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,12 +14,13 @@ entries:
       - title: did some research on web3, the so-called next generation of the internet, then joined an internet giant from web1 for a three-month internship, worked on web2 & web3 strategic investments
       - title: pivoted my research to generative ai following the release of gpt-3.5 in november 2022, and soon after, i joined a vc internship
       - title: joined 42 capital in summer 2023 for a six-month internship, learning from the top ai founders, investors and colleagues
-      - title: now focused on software products, bootstrapped startups, and blah blah blah...
+      - title: now focused on venture capital founders, software products, israel and islamic studies, and street photography
       - title: i also always <a href='archive.html'>blog</a>, mostly on tech, startups, and self-growth
 
   - title: things i like to geek out on
     entries:
       - title: writing, sketching, reading, and prototyping
+      - title: street photography, drawn to complex compositions and layering, passionate about traveling in the third world
       - title: discovering the under-the-radar sources & signals
       - title: enjoying visualizing data and crafting slides
       - title: jamming with sharp founders, builders, and makers
@@ -54,7 +55,7 @@ entries:
   - title: best way to connect
     entries:
       - title: for quick stuff, say hi on <a href='https://kylezgq.github.io/assets/images/WeChat-Contact.png'>wechat</a>
-      - title: for longer things or to schedule something, email is best hi-at-this-domain
+      - title: for longer things or to schedule something, email is best kylezgq-at-gmail-dot-com
 
   - title: find me elsewhere
     entries:
